--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,33 +1,32 @@
 name: Check Style Code for C# WPF
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    push:
+        branches:
+            - new_vetochka
+    pull_request:
+        branches:
+            - new_vetochka
 
 jobs:
-  checkstyle:
-    runs-on: windows-latest
+    checkstyle:
+        runs-on: windows-latest
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v2
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v3
+              with:
+                dotnet-version: '7.0.400'
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.0.400
+            - name: Restore dependencies
+              run: dotnet restore
 
-    - name: Restore dependencies
-      run: dotnet restore
+            - name: Build solution
+              run: dotnet build --no-restore --configuration Release
 
-    - name: Build solution
-      run: dotnet build --no-restore --configuration Release
-
-    - name: Run StyleCop Analyzers
-      run: |
-        dotnet tool install --global dotnet-format
-        dotnet format --check --verbosity diagnostic
+            - name: Run StyleCop Analyzers
+              run: |
+                dotnet tool install --global dotnet-format
+                dotnet format --check --verbosity diagnostic
