--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -21,7 +21,7 @@ jobs:
                 dotnet-version: 6.0
 
             -   name: Build solution
-                run: dotnet build --configuration Release /p:Platform=x64
+                run: dotnet build --configuration Release /p:Platform="Any CPU"
 
             - name: Restore dependencies
               run: dotnet restore
