--- a/MedicalInfo/MedicalInfo.csproj
+++ b/MedicalInfo/MedicalInfo.csproj
@@ -27,7 +27,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
     <TargetFramework>net6.0-windows</TargetFramework>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
