--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -25,6 +25,6 @@ jobs:
 
             - name: Run StyleCop Analyzers
               run: |
-                dotnet tool install --global dotnet-format
+                dotnet tool install --global dotnet-format --version 5.1.250801
                 dotnet format --verify-no-changes --verbosity diagnostic
 
