--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -3,33 +3,34 @@ name: .NET Framework Build and Syntax Check
 on:
   push:
     branches:
-      - prseven
+      - new_vetochka
+
   pull_request:
     branches:
-      - prseven
+      - new_vetochka
 
 jobs:
-  build:
-    runs-on: windows-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    build:
+        runs-on: windows-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v3
 
-    - name: Install .NET Framework Developer Pack
-      run: choco install netfx-4.7.2-devpack -y
+            - name: Install .NET Framework Developer Pack
+              run: choco install netfx-4.7.2-devpack -y
 
-    - name: Set up MSBuild
-      uses: microsoft/setup-msbuild@v1
+            - name: Set up MSBuild
+              uses: microsoft/setup-msbuild@v1
 
-    - name: Build with MSBuild
-      run: msbuild /p:Configuration=Release
+            - name: Build with MSBuild
+              run: msbuild /p:Configuration=Release
 
-    - name: Install XAML Styler
-      run: dotnet tool install -g XamlStyler.Console
+            - name: Install XAML Styler
+              run: dotnet tool install -g XamlStyler.Console
 
-    - name: Format XAML files
-      run: xstyler -d ./ 
+            - name: Format XAML files
+              run: xstyler -d ./
 
-    - name: Check for changes after formatting
-      run: git diff --exit-code
+            - name: Check for changes after formatting
+              run: git diff --exit-code
 
